--- a/package.json
+++ b/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "absence-manager-client",
+  "name": "react-app",
   "version": "0.1.0",
-  
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.11.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.0.3",
-    "axios": "^1.2.0",
-    "dayjs": "^1.11.6",
-    "ics": "^2.41.0",
-    "moment": "^2.29.4",
+    "axios": "^1.3.4",
+    "material-ui-search-bar": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.2",
-    "styled-components": "^5.3.6",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -48,19 +44,6 @@
     ]
   },
   "devDependencies": {
-    "babel-jest": "^29.3.1",
-    "expect": "^29.3.1",
-    "gh-pages": "^4.0.0",
-    "moxios": "^0.4.0",
-    "redux-logger": "^3.0.6",
-    "redux-mock-store": "^1.5.4"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.(js|jsx)?$": "babel-jest"
-    },
-    "transformIgnorePatterns": [
-      "node_modules/(?!axios)/"
-    ]
+    "@expo/webpack-config": "^18.0.1"
   }
 }
